<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSettingPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsPage">

    <Spinner
        android:id="@+id/teamSpinnerSettingsPage"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usernameInputEditText"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_below="@id/textViewUsername"
        android:layout_marginTop="16dp"
        android:autofillHints="Username"
        android:hint="@string/Username_hint"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/saveUserSettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/usernameInputEditText"
        tools:ignore="MissingConstraints"
...
