...
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="134dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="60dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
...
