...
        android:layout_height="27dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="state"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/taskStateId"
        app:layout_constraintTop_toBottomOf="@+id/paragraphLayout" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <TextView
            android:id="@+id/taskDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/task_title"
            android:textColor="#333333"
...
